# quant-pyscript

./: .gitignore  Procfile  build.sh  conftest.py  main.py  pyproject.toml  railway.toml  render.yaml  requirements.txt  securities.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
quant_ratings/: __init__.py
quant_ratings/aggregator/: __init__.py  aggregator.py
quant_ratings/api/: __init__.py  app.py  router.py  schemas.py
quant_ratings/config/: __init__.py  api_keys.py  engine_factory.py  security_registry.py  weight_profile_registry.py
quant_ratings/engine/: __init__.py  data_manager.py  rating_engine.py
quant_ratings/models/: __init__.py  cycle_summary.py  enums.py  market_data.py  rating_record.py  results.py  security.py  weight_profile.py
quant_ratings/observability/: __init__.py  alert_sink.py  logger.py
quant_ratings/persistence/: __init__.py  base.py  orm.py  sqlalchemy_store.py
quant_ratings/providers/: __init__.py  alpha_vantage_provider.py  base.py  fred_provider.py  live_provider.py  mock_provider.py  (+2 more)
tests/: test_aggregator.py  test_api.py  test_data_manager.py  test_economic_scorer.py  test_integration.py  test_models.py  test_observability.py  test_orderflow_scorer.py  test_property_data_manager.py  test_property_orderflow_scorer.py  test_property_persistence.py  test_property_weight_profile_registry.py  test_rating_engine.py  test_scheduler.py  test_security_registry.py  test_sentiment_scorer.py  test_weight_profile_registry.py
(+26 files in other folders)
