[project]
name = "quant-ratings"
version = "0.1.0"
description = "Quant Ratings engine — multi-dimensional scoring for securities"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn==0.32.1",
    "sqlalchemy==2.0.36",
    "pydantic==2.10.3",
    "apscheduler==3.10.4",
]

[project.optional-dependencies]
dev = [
    "hypothesis==6.122.3",
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "httpx==0.28.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "quant_ratings"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["quant_ratings*"]
